﻿---------------------------------------------------------------------------------------------------
Version: 1.0.22
  Features:
    - Prepared for updates to angels industries
  Bugfixes:
    - Fixed that I was setting require behind mod checks potentially causing CRC fails in multiplayer
---------------------------------------------------------------------------------------------------
Version: 1.0.21
  Bugfixes:
    - Fixed fluidbox issue of facility
---------------------------------------------------------------------------------------------------
Version: 1.0.20
  Bugfixes:
    - Fixed error with the icon size of production science pack
---------------------------------------------------------------------------------------------------
Version: 1.0.19
  Bugfixes:
    - Fixed icon size of production science pack (due to omni-science update)
---------------------------------------------------------------------------------------------------
Version: 1.0.18
  Bugfixes:
    - Updated icon reference to be angelsrefining not angelspetrochem
---------------------------------------------------------------------------------------------------
Version: 1.0.17
  Bugfixes:
    - Fixed typo in info.json relating to bobwarfare
---------------------------------------------------------------------------------------------------
Version: 1.0.16
  Bugfixes:
    - Updated science pack icon sizes being wrong (for real this time)
      - Had an issue with the icon replace script for the bob colour update
---------------------------------------------------------------------------------------------------
Version: 1.0.15
  Bugfixes:
    - Updated science pack icon sizes being wrong
---------------------------------------------------------------------------------------------------
Version: 1.0.14
  Features:
    - Updated for 0.18
    - Pretty sure i will have to do some graphical tweaks for the next update.