@@ -1,6 +1,6 @@
 {
   "name": "Clowns-AngelBob-Nuclear",
-  "version": "1.1.13",
+  "version": "1.1.14",
   "factorio_version": "0.18",
   "title": "MadClown01's AngelBob Nuclear",
   "author": "MadClown01",
