@@ -1,6 +1,6 @@
 {
   "name": "Clowns-Science",
-  "version": "1.0.21",
+  "version": "1.0.22",
   "factorio_version": "0.18",
   "title": "MadClown01's Science",
   "author": "MadClown01",
