@@ -155,7 +155,7 @@ data:extend(
 		{
 			module_slots = 2
 		},
-		allowed_effects = {"consumption", "speed", "pollution"},
+		allowed_effects = {"consumption", "speed", "pollution"},--no efficiency
 		energy_source =
 		{
 			type = "electric",
